.workloadConfig/resume/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: resume-svc
  labels:
    app.kubernetes.io/name: hugo
    app.kubernetes.io/component: webfront
    app.kubernetes.io/part-of: resume
    #+operator-builder:collection:field:name="profile.firstName",type=string,default="John",replace="john"
    #+operator-builder:collection:field:name="profile.lastName",type=string,default="Doe",replace="doe"
    app.kubernetes.io/instance: resume-johndoe
    app.kubernetes.io/managed-by: resume-operator
    app.kubernetes.io/created-by: resume-controller-manager
    #+operator-builder:field:name="resume.image.tag",type=string,default="latest"
    app.kubernetes.io/version: latest
  annotations:
    #+operator-builder:field:name="certIssuer",type=string,default="letsencrypt-staging"
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  selector:
    app.kubernetes.io/name: hugo
    app.kubernetes.io/component: webfront
    #+operator-builder:collection:field:name="profile.firstName",type=string,default="John",replace="john"
    #+operator-builder:collection:field:name="profile.lastName",type=string,default="Doe",replace="doe"
    app.kubernetes.io/instance: resume-johndoe
  ports:
    - port: 8080
      targetPort: 1313
